# ZoreEngine-Template

./: .gitignore  CMakeLists.txt
assets/shaders/: example.glsl
cmake/: ZoreEngine.cmake
src/: main.cpp  main.hpp
